--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,10 @@ authors = [
 license = { file = "LICENSE" }
 
 dependencies = [
-    "numpy==2.3.5",
-    "nibabel==5.3.2",
-    "matplotlib==3.10.7",
-    "scipy==1.16.3"
+    "numpy",
+    "nibabel",
+    "matplotlib",
+    "scipy"
 ]
 
 
